--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,11 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
+
+
+PLACETOPAY_URL=https://dev.placetopay.com/redirection/
+PLACETOPAY_URL_TEST=https://dev.placetopay.com/redirection/
+PLACETOPAY_LOGIN=6dd490faf9cb87a9862245da41170ff2
+PLACETOPAY_TRANKEY=024h1IlD
+
+CODE=
