--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,11 @@
         "psr-4": {
             "App\\": "app/",
             "Src\\": "src/"
-        }
+        },
+        "files": [
+            "src/helpers/priceFormat.php"
+        ]
+
     },
     "autoload-dev": {
         "psr-4": {
